test/syntax/fail/merge_missing_constructor.sync
type state =
  | S0
  | S1
  | S2

let f (s : state) =
  merge s (S0 -> 0) (S2 -> 2)
